# executor

./: docling.md  grobid.xml  pmc13221934.md
config/: grobid.yaml
executor/: README.md  __init__.py  db.py  docling_exec.py  grobid_exec.py  main.py  mapper.py  parser.py  pyproject.toml  run_grobid.py  specter2.py
executor/runner/: mapper.py  specter2.py
executor/scripts/: grobid_run.sh
executor/src/runner/: parser.py
executor/tests/: test_main.py
s12929-026-01271-w/auto/: s12929-026-01271-w.md  s12929-026-01271-w_content_list.json  s12929-026-01271-w_content_list_v2.json  s12929-026-01271-w_model.json
scheduler/: .env  Dockerfile  docker-compose.yml  grouped_by_title.json  pyproject.toml
scheduler/celery_app/tasks/: process.py
scheduler/scripts/: test_scrape.py
scheduler/src/: main.py
scheduler/src/config/: celery_config.py  logging.py  settings.py
scheduler/src/scripts/: trigger_scrape.py
scheduler/src/tasks/: embed.py  maintenance.py  process.py  scrape.py
scheduler/src/utils/: dedup.py  paper_schema.py  text_cleaner.py
scripts/: grobid_run.sh
tests/: test_main.py  test_parser.py
